salesforce/metadata/objects/MSD_Connector__c.object
<CustomObject>
    <label>MSD Connector</label>
    <nameField>
        <label>Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSD Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSD_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSD_ConnectorType__c</fullName>
        <label>Connector Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_TargetSystem__c</fullName>
        <label>Target System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_Direction__c</fullName>
        <label>Direction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_SecretKey__c</fullName>
        <label>Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_TimeoutMs__c</fullName>
        <label>Timeout (ms)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_MaxRetries__c</fullName>
        <label>Max Retries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_Parameters__c</fullName>
        <label>Parameters (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MSD_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>